# doc_trans

./: .gitattributes  .gitignore  README.md
aspose_service/: .env.example  README.md  pyproject.toml
aspose_service/app/: __init__.py  main.py  models.py
aspose_service/app/api/: routes.py
aspose_service/app/core/: config.py  errors.py
aspose_service/app/services/: aspose_adapters.py  converter.py  detector.py  storage.py
aspose_service/app/workers/: __init__.py  aspose_convert.py
aspose_service/scripts/: bootstrap_aspose_workers.sh  e2e_smoke.sh  verify_aspose_workers.sh
aspose_service/tests/: test_api.py  test_aspose_adapters.py  test_aspose_worker.py  test_config.py  test_converter.py  test_detector.py  test_packaging.py  test_storage.py
java_aspose_service/: Dockerfile  README.md  pom.xml
java_aspose_service/scripts/: e2e_smoke.sh
lo_pdf_service/: .gitignore  Dockerfile  README.md  pyproject.toml
lo_pdf_service/app/: main.py  models.py
lo_pdf_service/app/api/: conversions.py  dependencies.py
lo_pdf_service/app/conversion/: detector.py  email_converter.py  image_converter.py  libreoffice.py  manifest.py  pdf_ops.py  service.py
lo_pdf_service/app/core/: config.py  errors.py  paths.py
lo_pdf_service/app/jobs/: models.py  store.py  worker.py
lo_pdf_service/app/storage/: local.py
lo_pdf_service/docs/superpowers/plans/: 2026-05-21-libreoffice-document-conversion-service.md
lo_pdf_service/docs/superpowers/specs/: 2026-05-21-libreoffice-document-conversion-service-design.md
lo_pdf_service/tests/: conftest.py
lo_pdf_service/tests/integration/: test_libreoffice_smoke.py
lo_pdf_service/tests/unit/: test_api.py  test_config.py  test_detector.py  test_email_converter.py  test_errors.py  test_image_converter.py  test_job_store.py  test_libreoffice.py  test_manifest.py  test_pdf_ops.py  test_service.py  test_storage.py  test_worker.py
(+16 files in other folders)
