[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aspose-document-conversion-service"
version = "0.1.0"
description = "FastAPI service for converting Office and email documents to PDF with Aspose."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "pydantic-settings>=2.2,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
aspose = [
  "aspose-words>=24.0",
  "aspose-cells-python>=24.0",
  "aspose-slides>=24.0",
  "Aspose.Email-for-Python-via-NET>=24.0",
]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["runtime*", "tests*"]
