[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libreoffice-document-conversion-service"
version = "0.1.0"
description = "FastAPI service for converting Office, PDF, image, and email files to PDF using LibreOffice."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "extract-msg>=0.48.5",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "olefile>=0.47",
  "pillow>=10.4.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pypdf>=4.3.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests that require LibreOffice or full runtime dependencies"
]
addopts = "-q"
